# clindoc

./: .gitignore  DefinitionDependencyGraph  README.md  RuleDependencyGraph  out.md  run.py  setup.cfg  setup.py  test.py
Thinktank/Sudoku_with_user_doc/: out.md
Thinktank/mapf/: out.md
clindoc/: __init__.py  __main__.py  astline.py  astprogram.py  clindoc.py  comment.py  contributordoc.py  definitiondependencygraph.py  dependencygraph.py  directive.py  east.py  ruledependencygraph.py  symbol.py  userdoc.py  utils.py  variable.py
clindoc/astprogram/: __init__.py  astnode.py  astprogram.py
clindoc/astprogram/astnode/: __init__.py
clindoc/builder/: __init__.py  builder.py  component.py  contributodocumentation.py  graphs.py  userdocumentation.py
examples/: .sudoku_without_user_doc.lp.kate-swp  mapf_without_user_doc.lp  proposition 3.lp  proposition1.lp  proposition2.lp  proposition3.lp  sudoku_with_user_doc.lp  sudoku_without_user_doc.lp  test_astprogram.lp  user_doc_like_python.lp
examples/mapf/: input.lp
examples/mapf/encoding/: action-m.lp  goal-m.lp  output-m.lp
examples/sudoku/: input.lp
examples/sudoku/encoding/: sudoku.lp
