[metadata]
name = clindoc
version = 1.0.0
author = Aurelien
author_email = hahnmartinlu@uni-potsdam.de
description = Automatic viz
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/potassco/clindoc

[options]
packages = clindoc
install_requires =
    clingo>=5.5.0
    graphviz
    nbsphinx
    sphinx>=4.5.0
    sphinx_rtd_theme
    rstcloth>=0.5.2

[options.extras_require]
dev =
    pylint>=2.12
    pytest>=6.2
test =
    pytest>=6.2
    

[options.entry_points]
console_scripts =
    clindoc = clindoc:main
